finished integration of REST API with routes :)
